# trick.sys.find

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/app/: args.rs
src/modules/file_system/: directory.rs  file.rs
src/services/find/: file.rs
src/trick_sys/find/: app.rs  app_builder.rs  mod.rs  search_engine.rs
tests/: integration_test.rs
