[package]
name = "tricksys-find"
authors = ["Adam Pelc <adam.pelc.su@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.5", features = ["derive"] }
log = "0.4.14"
simple_logger = "2.1.0"
walkdir = "2"
